syntax = "proto3";

option csharp_namespace = "PostPigeon.Server";

package chatroom;

service Chatroom {
  rpc Join (JoinRequest) returns (JoinResponse);
  rpc SendMessage (MessageRequest) returns (None);
  rpc ReceiveMessages (None) returns (stream MessageResponse);
  rpc GetUsers (None) returns (stream UserList);
}

message None {}

message JoinRequest {
  string name = 1;
  string avatar_url = 2;
}

enum JoinResult {
  SUCCESS = 0;
  FAILED = 1;
}
message JoinResponse {
  string error = 1;
  JoinResult result = 2;
}

message MessageRequest {
  string user_id = 1;
  string text_message = 2;
}

message MessageResponse {
  string sender_id = 1;
  string sender_avatar = 2;
  string text_message = 3;
}

enum UserStatus {
  UNKNOWN = 0;
  ONLINE = 1;
  OFFLINE = 2;
}
message UserResponse {
  string id = 1;
  string name = 2;
  UserStatus status = 3;
  string avatar = 4;
}

message UserList {
  repeated UserResponse users = 1;
}

message ReceiveRequest {
  string user = 1;
}
